# ai_employee

./: .env.example  .gitignore  AI_EMPLOYEE_WORKING_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_RUNNER_ARCHITECTURE_EXPLAINED.md  CONFIG_GUIDE.md  DATABASE_SUMMARY.md  EMAIL_PROCESSING_FIX_SUMMARY.md  EMAIL_TRACKING_COMPARISON.md  ENV_MANAGEMENT.md  FILESYSTEM_WATCHER_MANAGEMENT.md  GMAIL_FILTER_CONFIG_GUIDE.md  GMAIL_FILTER_IMPROVEMENT_PLAN.md  GMAIL_FILTER_PROCESSOR_GUIDE.md  GMAIL_IMAP_QUICKSTART.md  GMAIL_WATCHER_CHANGES_TO_IMPLEMENT.md  GMAIL_WATCHER_IMAP_UPDATE_PLAN.md  GMAIL_WATCHER_SETUP.md  GMAIL_WATCHER_UPDATE_SUMMARY.md  HYBRID_TRACKING_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_ANALYSIS_FOLDER_WATCHER.md  LOGGING_MANAGEMENT.md  MIGRATION_GUIDE.md  NEW_CHANGES.md  ORCHESTRATOR_CONCURRENCY_IMPLEMENTATION.md  ORPHANED_FILES_RECOVERY.md  PHASE1_SUMMARY.md  PROCESSED_EMAIL_TRACKING_EXPLAINED.md  QUICKSTART.md  QUICK_START_GMAIL.md  README.md  REORGANIZATION_COMPLETE.md  RULES.md  SETTINGS_AND_WORKFLOW.md  SQLMODEL_GUIDE.md  STRICT_JSON_IMPLEMENTATION_SUMMARY.md  TASK_TEMPLATE_ANALYSIS.md  (+25 more)
.claude/: ralph-loop.local.md
.qwen/: settings.json  settings.json.orig
core/: __init__.py  config.py
database/: __init__.py  database.py  db_engine.py  models.py
skills/: __init__.py  email-triage.md  file-processor.md
templates/: action_item_template.md  approval_request_template.md  email_template.md  log_entry_template.md  plan_template.md
tests/: test_logging_manager.py  test_watcher_verbose.py
utils/: __init__.py  dashboard.py  (+3 more)
(+58 files in other folders)
